[gd_scene load_steps=13 format=2]

[ext_resource path="res://misc/VPPixel-Simplified.otf" type="DynamicFontData" id=1]
[ext_resource path="res://misc/ui.tres" type="Theme" id=2]
[ext_resource path="res://scripts/menu.gd" type="Script" id=3]
[ext_resource path="res://sprites/arrow.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 88
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Button" type="Button" parent="MarginContainer/Main"]
margin_right = 984.0
margin_bottom = 94.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "while(true)"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main"]
margin_top = 98.0
margin_right = 984.0
margin_bottom = 334.0

[node name="Play" type="Button" parent="MarginContainer/Main/VBoxContainer"]
margin_right = 984.0
margin_bottom = 56.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Play"
flat = true

[node name="Editor" type="Button" parent="MarginContainer/Main/VBoxContainer"]
margin_top = 60.0
margin_right = 984.0
margin_bottom = 116.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "LVL Editor????"
flat = true

[node name="Settings" type="Button" parent="MarginContainer/Main/VBoxContainer"]
margin_top = 120.0
margin_right = 984.0
margin_bottom = 176.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/Main/VBoxContainer"]
margin_top = 180.0
margin_right = 984.0
margin_bottom = 236.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Leave right now"
flat = true

[node name="arrow" type="Sprite" parent="MarginContainer/Main"]
modulate = Color( 1, 1, 1, 0.2 )
position = Vector2( 572.591, 76.5886 )
rotation = -2.45456
scale = Vector2( 0.46894, 0.46894 )
z_index = -2
texture = ExtResource( 4 )

[node name="arrow2" type="Sprite" parent="MarginContainer/Main"]
modulate = Color( 1, 1, 1, 0.2 )
position = Vector2( 427.373, 79.1973 )
rotation = -3.81467
scale = Vector2( 0.46894, 0.46894 )
z_index = -2
texture = ExtResource( 4 )

[node name="arrow3" type="Sprite" parent="MarginContainer/Main"]
modulate = Color( 1, 1, 1, 0.2 )
position = Vector2( 451.721, 202.676 )
rotation = -5.49179
scale = Vector2( 0.46894, 0.46894 )
z_index = -2
texture = ExtResource( 4 )

[node name="arrow4" type="Sprite" parent="MarginContainer/Main"]
modulate = Color( 1, 1, 1, 0.2 )
position = Vector2( 562.156, 193.98 )
rotation = -7.01315
scale = Vector2( 0.46894, 0.46894 )
z_index = -2
texture = ExtResource( 4 )

[node name="Settings" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Volume" type="Button" parent="MarginContainer/Settings"]
margin_right = 984.0
margin_bottom = 56.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Volume"
flat = true

[node name="Settings Back" type="Button" parent="MarginContainer/Settings"]
margin_top = 60.0
margin_right = 984.0
margin_bottom = 116.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Back"
flat = true

[node name="Volume" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Music" type="VBoxContainer" parent="MarginContainer/Volume"]
margin_right = 984.0
margin_bottom = 61.0

[node name="Label" type="Label" parent="MarginContainer/Volume/Music"]
margin_top = -1.0
margin_right = 984.0
margin_bottom = 38.2
text = "Music"

[node name="Music Slider" type="HSlider" parent="MarginContainer/Volume/Music"]
margin_top = 43.0
margin_right = 984.0
margin_bottom = 61.0
value = 50.0

[node name="Sound" type="VBoxContainer" parent="MarginContainer/Volume"]
margin_top = 65.0
margin_right = 984.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="MarginContainer/Volume/Sound"]
margin_top = -1.0
margin_right = 984.0
margin_bottom = 38.2
text = "Sound"

[node name="Sound Slider" type="HSlider" parent="MarginContainer/Volume/Sound"]
margin_top = 43.0
margin_right = 984.0
margin_bottom = 61.0
value = 50.0

[node name="Volume Back" type="Button" parent="MarginContainer/Volume"]
margin_top = 130.0
margin_right = 984.0
margin_bottom = 169.2
text = "Back"
flat = true

[node name="Label" type="Label" parent="MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 32.0
margin_right = 1004.0
margin_bottom = 566.2
custom_fonts/font = SubResource( 8 )
text = "EASTER EGG! useless, if you found this then congrats, now you can close the game"
align = 1
autowrap = true
[connection signal="pressed" from="MarginContainer/Main/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MarginContainer/Settings/Volume" to="." method="_on_Volume_pressed"]
[connection signal="pressed" from="MarginContainer/Settings/Settings Back" to="." method="_on_Settings_Back_pressed"]
[connection signal="value_changed" from="MarginContainer/Volume/Music/Music Slider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Volume/Sound/Sound Slider" to="." method="_on_Sound_Slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Volume/Volume Back" to="." method="_on_Volume_Back_pressed"]
