[gd_scene load_steps=17 format=2]

[ext_resource path="res://misc/VPPixel-Simplified.otf" type="DynamicFontData" id=1]
[ext_resource path="res://misc/UI.tres" type="Theme" id=2]
[ext_resource path="res://scripts/menu.gd" type="Script" id=3]
[ext_resource path="res://misc/font_theme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/easter.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 88
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Button" type="Button" parent="MarginContainer/Main"]
margin_right = 984.0
margin_bottom = 94.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "while(true)"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Main"]
margin_top = 98.0
margin_right = 984.0
margin_bottom = 334.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/MarginContainer"]
margin_left = 300.0
margin_right = 684.0
margin_bottom = 236.0

[node name="Play" type="Button" parent="MarginContainer/Main/MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 56.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Play"

[node name="Editor" type="Button" parent="MarginContainer/Main/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 384.0
margin_bottom = 116.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Level Editor"

[node name="Settings" type="Button" parent="MarginContainer/Main/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 384.0
margin_bottom = 176.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Volume Settings"

[node name="Quit" type="Button" parent="MarginContainer/Main/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 384.0
margin_bottom = 236.2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "return;"

[node name="Settings" type="MarginContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_constants/margin_right = 350
custom_constants/margin_top = 50
custom_constants/margin_left = 350

[node name="Volume" type="VBoxContainer" parent="MarginContainer/Settings"]
margin_left = 350.0
margin_top = 50.0
margin_right = 634.0
margin_bottom = 560.0
custom_constants/separation = 20

[node name="Music" type="VBoxContainer" parent="MarginContainer/Settings/Volume"]
margin_right = 284.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="MarginContainer/Settings/Volume/Music"]
margin_top = -1.0
margin_right = 284.0
margin_bottom = 38.2
text = "Music"

[node name="Music Slider" type="HSlider" parent="MarginContainer/Settings/Volume/Music"]
margin_top = 43.0
margin_right = 284.0
margin_bottom = 59.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Sound" type="VBoxContainer" parent="MarginContainer/Settings/Volume"]
margin_top = 79.0
margin_right = 284.0
margin_bottom = 138.0

[node name="Label" type="Label" parent="MarginContainer/Settings/Volume/Sound"]
margin_top = -1.0
margin_right = 284.0
margin_bottom = 38.2
text = "Sound"

[node name="Sound Slider" type="HSlider" parent="MarginContainer/Settings/Volume/Sound"]
margin_top = 43.0
margin_right = 284.0
margin_bottom = 59.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Volume Back" type="Button" parent="MarginContainer/Settings/Volume"]
margin_top = 158.0
margin_right = 284.0
margin_bottom = 197.2
text = "Back"

[node name="Label" type="RichTextLabel" parent="MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/bold_font = SubResource( 10 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[center]Join the SurrailWhale [color=#0645AD][url=https://discord.gg/j7Vjk7B]Discord server[/url][/color]![/center]
    [center][b]Powered by [color=#0645AD][url=https://godotengine.org/]Godot[/url][/color] :)[/b][/center]

    [b]Press ESC to get back to the menu[/b]"
text = "Join the SurrailWhale Discord server!
    Powered by Godot :)

    Press ESC to get back to the menu"
scroll_active = false
script = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/Main/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Main/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/Main/MarginContainer/VBoxContainer/Editor" to="." method="_on_Editor_pressed"]
[connection signal="pressed" from="MarginContainer/Main/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/Main/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="MarginContainer/Settings/Volume/Music/Music Slider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Settings/Volume/Sound/Sound Slider" to="." method="_on_Sound_Slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Settings/Volume/Volume Back" to="." method="_on_Volume_Back_pressed"]
[connection signal="meta_clicked" from="MarginContainer/Label" to="MarginContainer/Label" method="_on_Label_meta_clicked"]
